--- a/style.css
+++ b/style.css
@@ -1,5 +1,87 @@
 *{
+    font-family: 'Oswald', sans-serif;
     margin: 0;
     padding: 0;
-    font-family: ;
+
 }
+
+.container{
+    height: 100vh;
+
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5 ,1fr);
+
+
+}
+.side-bar{
+    background-color: #1992D3;
+    color: white;
+    grid-row: 1/ 6;
+    grid-column: 1/2;
+    text-align: start;
+
+
+}
+.header{
+    background-color: #ffffff;
+    grid-column: 2/6;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+}
+.search{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.profile{
+    display: flex;
+    justify-content: space-between;
+;
+}
+.notification-tab{
+    display: flex;
+
+}
+.main-content{
+    background-color: #b9e6ff;
+    grid-column: 2/6;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(2,1fr);
+}
+.projects{
+    grid-column: 1/3;
+    grid-row: 1/3;
+    
+}
+.projects-1{
+    gap: 10px;
+    display: grid;
+    grid-template-columns: repeat(autofit , minmax(100px ,1fr));
+}
+.announcement{
+    grid-column: 3/4;
+    grid-row: 1/2;
+}
+.trending{
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.trend-container{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row: 1fr 1fr 1fr;
+}
+
+
+.side-bar ul{
+    
+    margin-top: 2rem;
+
+
+}
+.card{
+    background-color: white;
+}
+
